--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -7,13 +7,13 @@
 name: app
 
 # The runtime the application uses.
-type: "java:8"
+type: "java:11"
 
 disk: 1024
 
 # The hooks executed at various points in the lifecycle of the application.
 hooks:
-    build: mvn clean install
+    build: mvn clean package
 
 # The relationships of the application with services or other applications.
 #
